--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,126 +4,95 @@
   src: url("../fonts/KGEverSinceNewYork.ttf");
 }
 
-.header {
+header {
   text-align: center;
-  width: 100%;
-  position: inherit;
+  width: 90%;
+  margin: auto;
 }
 
-.main {
-  width: 1000px;
-  height: 600px;
+main {
+  background-color: rgb(106, 211, 243);
+  width: 90%;
+  margin: auto;
   left: 5%;
   right: 5%;
-  margin: 0 auto;
-  position: absolute;
 }
 
 .footer {
-  width: 100%;
+  width: 90%;
+  margin: auto;
+  min-height: 9%;
   text-align: center;
-  position: absolute;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .tituloPrincipal {
   font-family: KGEverSinceNewYork;
-  font-size: 45px;
+  font-size: 200%;
   color: blue;
 }
 
-a:not(:hover) {
-  text-decoration: none;
+.painel {
+  min-height: 220pt;
 }
 
-.rodape-contato {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-
-#divPrincipal {
-  background-color: rgb(106, 211, 243);
-  width: 100%;
-  height: 100%;
-}
-
-.divs {
-  display: flex;
-  position: relative;
-}
-/* Configurações DIVs lado esquerdo da tela */
-
-#divPainelEsquerdo {
-  width: 30%;
-  height: 100%;
-  float: left;
-}
-
-#divAcertosErros {
-  width: 100%;
-  height: 50%;
+div {
   align-items: center;
   justify-content: center;
 }
 
+#divPainelEsquerdo {
+  width: 30%;
+  float: left;
+}
+
+#divPainelDireito {
+  width: 70%;
+  float: right;
+}
+
+#divAcertosErros {
+  min-height: 110pt;
+}
+
 #divAcertos {
   width: 80%;
-  height: 33%;
+  height: 40pt;
   margin: 0 auto;
 }
 
 #divErros {
   width: 80%;
-  height: 33%;
+  height: 40pt;
   margin: 0 auto;
 }
 
 #divCronometro {
   width: 80%;
-  height: 34%;
+  height: 30pt;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
 }
 
 #divRodadas {
   width: 100%;
-  height: 50%;
-}
-/*FIM configurações DIVs do lado esquerdo da tela*/
-
-/* Configurações DIVs lado direto da tela */
-
-#divPainelDireito {
-  width: 70%;
-  height: 100%;
-  float: right;
+  height: 110pt;
 }
 
 #divFatores {
   width: 100%;
-  height: 50%;
-  align-items: center;
+  height: 110pt;
   justify-content: center;
-  position: relative;
+  align-items: flex-start;
 }
 
 #divResultado {
-  width: 100%;
-  height: 30%;
-  align-items: center;
-  justify-content: center;
+  height: 55pt;
 }
+
 #divAcoes {
-  width: 100%;
-  height: 20%;
-  align-items: center;
-  justify-content: center;
+  height: 55pt;
 }
 
-/*FIM configurações DIVs do lado direito da tela*/
-
-/* INICIO Botões*/
 .btnIniciarJogo {
   margin: 0 auto;
   color: green;
@@ -135,55 +104,44 @@ a:not(:hover) {
 }
 
 .btnAcoes {
-  height: 80%;
+  margin-left: 30.5%;
+  margin-top: 2.5%;
+  height: 30pt;
   width: 40%;
   font-family: KGEverSinceNewYork;
-  font-size: 300%;
   font-style: oblique;
+  font-size: 16pt;
 }
-/* FIM Botões*/
 
-/* INICIO inputs*/
+#btnConfiguracoes {
+  margin-top: 2.5%;
+  margin-right: 2.5%;
+  width: 30pt;
+  height: 30pt;
+  float: right;
+  background-image: url("../imagens/engrenagem.ico");
+  background-size: 30pt;
+}
 
 #inputOperador {
-  width: 20%;
-  height: 50%;
   text-align: center;
-  font-size: 700%;
   border: none;
-  position: relative;
+  width: 30%;
   background-color: transparent;
 }
 
 #inputResultado {
-  height: 60%;
+  height: 50pt;
   width: 40%;
+  margin-left: 30%;
   border-style: double;
 }
 
 .inputFatores {
-  height: 50%;
+  margin-top: 5%;
+  height: 55pt;
   width: 30%;
   border-style: double;
-}
-
-.inputs {
-  font-family: KGEverSinceNewYork;
-  font-size: 400%;
-  font-style: oblique;
-  text-align: center;
-  color: blue;
-}
-
-.inputsAcertosErros {
-  font-family: KGEverSinceNewYork;
-  font-size: 300%;
-  text-align: center;
-  width: 40%;
-  float: right;
-  position: relative;
-  background-color: transparent;
-  border-style: none;
 }
 
 #inputErros {
@@ -193,27 +151,33 @@ a:not(:hover) {
 #inputAcertos {
   color: blue;
 }
-#labelCronometro {
+
+.inputs {
   font-family: KGEverSinceNewYork;
-  font-size: 200%;
+  font-size: 25pt;
   font-style: oblique;
   text-align: center;
-  width: 60%;
+  color: blue;
+}
+
+.inputsAcertosErros {
+  font-size: larger;
+  text-align: center;
+  width: 40%;
+  float: right;
+  background-color: transparent;
+  border-style: none;
+}
+
+#labelCronometro {
+  font-family: KGEverSinceNewYork;
+  font-size: 14pt;
+  font-style: oblique;
+  text-align: center;
+  width: 50pt;
   margin: 0 auto;
   background-color: blue;
   color: white;
-}
-
-/*FIM Inputs*/
-
-/*INICIO Labels*/
-.labels {
-  font-family: KGEverSinceNewYork;
-  font-size: 44px;
-  text-align: center;
-  width: 30%;
-  float: left;
-  position: relative;
 }
 
 #labelErros {
@@ -223,4 +187,3 @@ a:not(:hover) {
 #labelAcertos {
   color: blue;
 }
-/*FIM Labels*/
