--- a/public/matematicando/css/style.css
+++ b/public/matematicando/css/style.css
@@ -1,79 +1,142 @@
-/* Chamada para fonte customizada*/
-@font-face {
-  font-family: KGEverSinceNewYork;
-  src: url("../fonts/KGEverSinceNewYork.ttf");
+body {
+  margin: 0;
+  /* Eliminates default margin on body */
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-  text-align: center;
-  width: 80vw;
-  margin: auto;
+  /* Use Flexbox for better alignment and responsiveness */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* Add some space between elements */
+  padding: 1.5rem 0;
+  /* Add some padding to the top and bottom */
+  background-color: #f0f0f0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* Use min-height instead of height to prevent content from overflowing */
+  min-height: 10vh;
+  min-width: 100%;
 }
 
 main {
-  background-color: rgb(106, 211, 243);
-  width: 80vw;
-  height: 60vh;
-  margin: auto;
-  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 100%;
+  min-height: 75vh;
+  max-height: 80vh;
+  margin: 0 auto;
+  border: 4px solid #333;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
 .footer {
-  width: 80vw;
+  /* Always specify the box-sizing property to avoid unexpected layout issues */
+  box-sizing: border-box;
+  /* Use percentage-based width for responsive design */
+  min-width: 100%;
+  /* Use viewport-based height unit for better scaling on different screen sizes */
   height: 10vh;
-  margin: auto;
-  text-align: center;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 1vw;
-}
-
-.tituloPrincipal {
-  font-family: KGEverSinceNewYork;
-  font-size: 3vw;
-  color: blue;
-}
-
-div {
-  align-items: center;
+  /* Center the text both vertically and horizontally in the footer */
+  display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 #divPainelEsquerdo {
-  width: 30vw;
-  height: 60vh;
+  min-width: 30vw;
+  min-height: 70vh;
   float: left;
+  box-sizing: border-box;
+  /* Add this property to include padding and border values in the total width of the element */
+  padding: 20px;
+  /* Add some padding to the element for better spacing and readability */
+  border: 1px solid #ccc;
+  /* Add a border to the element to distinguish it from other elements */
 }
 
 #divPainelDireito {
-  width: 50vw;
-  height: 60vh;
+  min-width: 50vw;
+  min-height: 70vh;
   float: right;
-}
-
-#divAcertosErros {
-  width: 30vw;
-  height: 30vh;
+  box-sizing: border-box;
+  /* Include padding and border in the element's total width and height */
 }
 
 #divAcertos {
-  width: 20vw;
-  height: 7vh;
+  min-width: 20vw;
+  min-height: 10vh;
+  /* added border to the divErros element */
+  border: 1px solid #ccc;
+  /* added some padding for better readability */
+  padding: 1rem;
+  /* added some background color to make the box more visible */
+  background-color: #f5f5f5;
 }
 
 #divErros {
-  width: 20vw;
-  height: 7vh;
+  min-width: 20vw;
+  min-height: 10vh;
+  /* added border to the divErros element */
+  border: 1px solid #ccc;
+  /* added some padding for better readability */
+  padding: 1rem;
+  /* added some background color to make the box more visible */
+  background-color: #f5f5f5;
 }
 
-#divCronometro {
-  width: 20vw;
-  height: 10vh;
-  margin: auto;
+.inputsAcertosErros {
+  font-size: 4rem;
+  text-align: center;
+  width: 7vw;
+  float: right;
+  background-color: transparent;
+  border-style: none;
 }
+
+#inputErros {
+  color: red;
+  margin-top: 0.5vh;
+}
+
+#inputAcertos {
+  margin-top: 0.5vh;
+  color: blue;
+}
+
+#labelErros {
+  color: red;
+  /* use rem units instead of vw for better accessibility and consistency */
+  font-size: 4rem;
+}
+
+#labelAcertos {
+  /* use rem units instead of vw for better accessibility and consistency */
+  font-size: 15px;
+  /* increase font size to improve readability */
+  color: #0000FF;
+  /* use hexadecimal color code instead of color name for better compatibility */
+}
+
+#labelCronometro {
+  font-size: 4rem;
+  font-style: oblique;
+  text-align: center;
+  background-color: blue;
+  color: white;
+  min-width: 20vw;
+}
+
 
 #divRodadas {
-  width: 20vw;
-  height: 30vh;
+  min-width: 20vw;
+  min-height: 30vh;
 }
 
 #divFatores {
@@ -100,7 +163,6 @@ div {
   font-size: 2vw;
   margin-top: 1vh;
   margin-left: 20vw;
-  border-radius: 10px;
 }
 
 .btnIniciarJogo {
@@ -112,7 +174,6 @@ div {
 }
 
 #btnConfiguracoes {
-  border-radius: 10px;
   margin-top: 2vh;
   margin-right: 2vw;
   width: 5vh;
@@ -123,7 +184,6 @@ div {
 }
 
 #inputOperador {
-  border-radius: 10px;
   text-align: center;
   border: none;
   width: 5vw;
@@ -132,7 +192,6 @@ div {
 }
 
 #inputResultado {
-  border-radius: 10px;
   height: 10vh;
   width: 30vw;
   margin-left: 10vw;
@@ -141,7 +200,6 @@ div {
 }
 
 .inputFatores {
-  border-radius: 10px;
   margin-top: 10vh;
   margin-left: 2vw;
   height: 10vh;
@@ -149,58 +207,14 @@ div {
   border-style: double;
 }
 
-#inputErros {
-  color: red;
-  margin-top: 0.5vh;
-}
-
-#inputAcertos {
-  margin-top: 0.5vh;
-  color: blue;
-}
-
 .inputs {
-  font-family: KGEverSinceNewYork;
   font-size: 5vw;
   font-style: oblique;
   text-align: center;
   color: blue;
 }
 
-.inputsAcertosErros {
-  font-size: 2vw;
-  text-align: center;
-  width: 7vw;
-  float: right;
-  background-color: transparent;
-  border-style: none;
-}
-
-#labelCronometro {
-  font-family: KGEverSinceNewYork;
-  font-size: 3vw;
-  font-style: oblique;
-  text-align: center;
-  background-color: blue;
-  color: white;
-  margin-left: 3vw;
-  border-radius: 10px;
-}
-
-#labelErros {
-  color: red;
-  font-size: 2vw;
-  margin-left: 5vw;
-}
-
-#labelAcertos {
-  margin-left: 4vw;
-  font-size: 2vw;
-  color: blue;
-}
-
 .fieldRodadas {
-  font-family: KGEverSinceNewYork;
   color: black;
   font-style: oblique;
   background-color: lightskyblue;
