--- a/public/matematicando/css/style.css
+++ b/public/matematicando/css/style.css
@@ -29,6 +29,7 @@ main {
   border: 4px solid #333;
   box-sizing: border-box;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  background-color: antiquewhite;
 }
 
 .footer {
@@ -42,48 +43,37 @@ main {
   align-items: center;
   text-align: center;
   font-size: 1vw;
-
 }
 
 .opcoes {
   margin-top: 1vh;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 #divAcertos {
-  flex-basis: 30%;
+  flex-basis: 20%;
   /* added border to the divErros element */
   border: 1px solid #ccc;
-  /* added some padding for better readability */
-  padding: 1rem;
-  /* added some background color to make the box more visible */
-  background-color: #f5f5f5;
 }
 
 #divErros {
-  flex-basis: 30%;
+  flex-basis: 20%;
   /* added border to the divErros element */
   border: 1px solid #ccc;
-  /* added some padding for better readability */
-  padding: 1rem;
-  /* added some background color to make the box more visible */
-  background-color: #f5f5f5;
 }
 
 #divCronometro {
-  flex-basis: 30%;
+  flex-basis: 50%;
   /* added border to the divErros element */
   border: 1px solid #ccc;
   /* added some padding for better readability */
   padding: 1rem;
-  /* added some background color to make the box more visible */
-  background-color: #f5f5f5;
 }
 
 .inputsAcertosErros {
   font-size: 2vw;
-  text-align: center;
   float: right;
   background-color: transparent;
   border-style: none;
@@ -108,41 +98,23 @@ main {
 }
 
 #labelCronometro {
-  font-size: 2vw;
+  font-size: 3vw;
   font-style: oblique;
   text-align: center;
   background-color: blue;
   color: white;
 }
 
-
-#divRodadas {
-  min-width: 20vw;
-  min-height: 30vh;
-}
-
-.fieldRodadas {
-  color: black;
-  font-style: oblique;
-  background-color: lightskyblue;
-  margin: auto;
-  width: 16vw;
-  margin-left: 1vw;
-  height: 25vh;
-  font-size: 2.5vh;
-  text-align: center;
-}
-
 .divFatores {
   margin-top: 10vh;
   display: flex;
   justify-content: space-between;
-  background-color: antiquewhite;
 }
 
 #inputOperador {
   flex-basis: 40%;
   background-color: transparent;
+  border: none;
 }
 
 .inputFatores {
