--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,6 +18,9 @@ body {
   text-align: center;
   padding: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* Painel Principal */
