--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,9 @@
+/* Declaração de variáveis*/
+:root {
+  --cor-principal: #f0f0f0;
+  --fonte-principal: "Open Sans", sans-serif;
+}
+
 /* CSS Reset - Essencial para um design multiplataforma */
 * {
   margin: 0;
@@ -5,22 +11,23 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh; /* Garante que o body ocupe a altura total da viewport */
-}
-
 /* Cabeçalho */
 .header {
-  background-color: #f0f0f0;
+  background-color: var(--cor-principal);
   text-align: center;
   padding: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+}
+
+body {
+  font-family: var(--fonte-principal);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Garante que o body ocupe a altura total da viewport */
 }
 
 /* Painel Principal */
@@ -38,20 +45,31 @@ body {
 /* Container para centralizar o conteúdo */
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
+.div-esquerda {
+  float: left;
+  border-right: 0.2rem solid #333;
+  flex-grow: 1; /* Ocupa o espaço disponível restante na tela */
+  height: 85vh;
+  max-width: 20vw;
+}
+.div-direita {
+  float: right;
+  flex-grow: 1; /* Ocupa o espaço disponível restante na tela */
+  align-items: center;
+}
 /* Opções do Jogo */
 .opcoes {
   display: flex;
   justify-content: space-around;
-  width: 100%;
   margin-bottom: 2rem;
 }
 
 .score-box {
+  justify-content: space-around;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,6 +97,8 @@ body {
 
 /* Expressão Matemática */
 .expressao {
+  justify-content: center;
+  width: 100%;
   display: flex;
   align-items: center;
   font-size: 20rem;
