--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,8 @@
 /* Declaração de variáveis*/
 :root {
   --cor-principal: #f0f0f0;
-  --fonte-principal: "Open Sans", sans-serif;
+  --fonte-principal: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  --background-color-default: #f7f3f3;
 }
 
 /* CSS Reset - Essencial para um design multiplataforma */
@@ -13,14 +14,50 @@
 
 /* Cabeçalho */
 .header {
+  font-family: var(--fonte-principal);
   background-color: var(--cor-principal);
-  text-align: center;
   padding: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+
+.menu {
+  padding: 1em;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
   align-items: center;
+}
+
+.menu-title {
+  font-size: 3rem;
+  font-family: var(--fonte-principal);
+  font-style: italic;
+}
+
+.menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.menu li {
+  margin: 0 1em;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #333;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+}
+
+.menu a:hover {
+  background-color: #ddd;
 }
 
 body {
@@ -36,7 +73,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: antiquewhite;
+  background-color: rgb(219, 224, 224);
   border: 4px solid #333;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   min-height: 85vh; /* Define a altura mínima como 70% da altura da viewport */
@@ -66,6 +103,7 @@ body {
   display: flex;
   justify-content: space-around;
   margin-bottom: 2rem;
+  font-weight: bold;
 }
 
 .score-box {
@@ -76,6 +114,7 @@ body {
   padding: 2rem;
   border-radius: 5px;
   font-size: 2rem;
+  border: 1px solid #000;
 }
 
 .score-box--green {
@@ -91,8 +130,11 @@ body {
 .cronometro {
   font-size: 4rem;
   padding: 2rem;
-  border: 1px solid #ccc;
+  border: 2px groove #000;
+  box-shadow: 5px 5px 10px rgba(1, 1, 1, 1);
   border-radius: 5px;
+  font-weight: bold;
+  background-color: var(--background-color-default);
 }
 
 /* Expressão Matemática */
@@ -103,6 +145,8 @@ body {
   align-items: center;
   font-size: 20rem;
   margin-bottom: 2rem;
+  color: #000;
+  font-weight: bold;
 }
 
 .input-fator,
@@ -113,6 +157,9 @@ body {
   font-size: 5rem;
   margin: 0 0.5rem;
   border: 2px solid #333;
+  color: #000;
+  font-weight: bold;
+  background-color: var(--background-color-default);
 }
 
 .operador,
@@ -130,7 +177,7 @@ body {
 
 .btn {
   background-color: #4caf50;
-  border: none;
+  border: 1px solid #000;
   color: white;
   padding: 1rem 2rem;
   text-align: center;
@@ -140,6 +187,7 @@ body {
   margin: 0 0.5rem;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .btn-responder {
